@@ -97,6 +97,8 @@ void ofconn_set_flow_format(struct ofconn *, enum nx_flow_format);
 enum nx_packet_in_format ofconn_get_packet_in_format(struct ofconn *);
 void ofconn_set_packet_in_format(struct ofconn *, enum nx_packet_in_format);
 
+void ofconn_set_controller_id(struct ofconn *, uint16_t controller_id);
+
 bool ofconn_get_flow_mod_table_id(const struct ofconn *);
 void ofconn_set_flow_mod_table_id(struct ofconn *, bool enable);
 
